fix(gdp settings): spacing fixes

--- a/sass/pictures-gallery.scss
+++ b/sass/pictures-gallery.scss
@@ -34,7 +34,7 @@
   .y-image-overlay {
     background-color: $pictures-gallery-hover-background-color;
     opacity: 0;
-    border-radius: $pictures-gallery-rounded-corners;
+    border-radius: $pictures-gallery-rounded-corners !important;
 
     &:hover {
       opacity: $pictures-gallery-hover-opacity;
@@ -65,6 +65,7 @@
   .yotpo-single-image-container {
     position: relative;
     margin-right: $pictures-gallery-margin-right;
+    margin-top: $pictures-gallery-margin-right;
     padding: 0;
     box-sizing: border-box;
     display: inline-block;
